# pasm

./: .dockerignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  ROADMAP.md  default.nix  docker-compose.yml  entry1  features.md  package-lock.json  package.json  pasm-walkthrough.md  pasmuser0.txt
src/: API.rs  TODO.md  lib.rs  main.rs  todos
src-tauri/: tauri.conf.json
src/client/: mod.rs  ui.rs
src/client/auth/: master.rs
src/client/cli/: commands.rs
src/client/curl/: requests.rs
src/client/entry/: ops.rs
src/client/input/: prompts.rs
src/client/response/: display.rs
src/server/: auth.rs  mod.rs
src/server/api/: amend.rs  backup.rs  create.rs  delete.rs  find.rs  health.rs  list.rs  mod.rs  users.rs
src/server/api/auth/: mod.rs  register.rs  remove.rs  update.rs
src/server/sql/: mod.rs
src/server/sql/migrations/: 001_init.sql
src/types/: db.rs  detail.rs  entry.rs  error.rs  health.rs  mod.rs  state.rs
src/utils/: config.rs  decrypt.rs  deserialize.rs  encrypt.rs  helper_fxns.rs  mod.rs  pasm_methods.rs  serialize.rs  types.rs
