[package]
name = "pasm"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

# [workspace]
# members = ["src"]

[dependencies]
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
axum = {version = "0.8.8", features = ["tokio", "http1"]}
tokio = {version = "1.49.0", features = ["full"]}
magic-crypt = "3.1.6"
sled = "0.34"
colored = "2.0"
dotenv = "0.15.0"
uuid = { version = "1", default-features = false, features = ["v4"] }
